[package]
name = "json_editor_idbi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
egui = "*"
egui_extras = { version = "*", default-features = false, features = ["chrono"] }
eframe = "*"
chrono = { version = "*", features = ["serde"] }
image = "0.24.6"
strum_macros = "0.25.2"
